--- a/trunk/SimpleStatusMsg/resource.rc
+++ b/trunk/SimpleStatusMsg/resource.rc
@@ -126,7 +126,7 @@ END
 IDD_AWAYMSGBOX DIALOG DISCARDABLE  0, 0, 208, 90
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | 
     WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
-CAPTION "%s Status Message: %s"
+CAPTION "%s Message (%s)"
 FONT 8, "MS Shell Dlg"
 BEGIN
     EDITTEXT        IDC_EDIT1,7,23,193,44,ES_MULTILINE | ES_AUTOVSCROLL | 
