--- a/trunk/AddContactPlus/resource.rc
+++ b/trunk/AddContactPlus/resource.rc
@@ -119,7 +119,7 @@ IDD_ADDCONTACT DIALOGEX 0, 0, 230, 180
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | 
     WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTROLPARENT
-CAPTION "Add %s"
+CAPTION "Add Contact"
 FONT 8, "MS Shell Dlg"
 BEGIN
     LTEXT           "User ID:",IDC_IDLABEL,6,4,89,10
