--- a/AddContactPlus/addcontactplus_9.vcproj
+++ b/AddContactPlus/addcontactplus_9.vcproj
@@ -801,7 +801,7 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-				RelativePath="addcontact.c"
+				RelativePath="addcontact.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -877,7 +877,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="main.c"
+				RelativePath="main.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
