--- a/trunk/AddContactPlus/resource.rc
+++ b/trunk/AddContactPlus/resource.rc
@@ -116,30 +116,24 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 IDD_ADDCONTACT DIALOGEX 0, 0, 230, 180
-STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | 
-    WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_CONTROLPARENT
 CAPTION "Add Contact"
-FONT 8, "MS Shell Dlg"
+FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     LTEXT           "User ID:",IDC_IDLABEL,6,4,89,10
     EDITTEXT        IDC_USERID,6,16,90,12,ES_AUTOHSCROLL
     LTEXT           "Protocol:",IDC_STATIC,112,4,108,10
-    COMBOBOX        IDC_PROTO,112,16,110,60,CBS_DROPDOWNLIST | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_PROTO,112,16,110,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Custom name:",IDC_STATIC,6,33,89,10
     EDITTEXT        IDC_MYHANDLE,6,45,90,12,ES_AUTOHSCROLL
     LTEXT           "Group:",IDC_STATIC,112,33,108,10
-    COMBOBOX        IDC_GROUP,112,45,110,60,CBS_DROPDOWNLIST | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_GROUP,112,45,110,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Options",IDC_STATIC,7,62,216,43
-    CONTROL         "Send ""You were added""",IDC_ADDED,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,11,75,204,10
-    CONTROL         "Send authorization request",IDC_AUTH,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,11,89,204,10
+    CONTROL         "Send ""You were added""",IDC_ADDED,"Button", BS_AUTOCHECKBOX | WS_TABSTOP,11,75,204,10
+    CONTROL         "Send authorization request",IDC_AUTH,"Button", BS_AUTOCHECKBOX | WS_TABSTOP,11,89,204,10
     GROUPBOX        "Authorization Request",IDC_AUTHGB,7,108,216,45
-    EDITTEXT        IDC_AUTHREQ,13,118,204,29,ES_MULTILINE | ES_AUTOVSCROLL | 
-                    ES_WANTRETURN | WS_VSCROLL
+    EDITTEXT        IDC_AUTHREQ,13,118,204,29,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
     DEFPUSHBUTTON   "&Add",IDOK,20,159,72,14
     PUSHBUTTON      "&Cancel",IDCANCEL,139,159,71,14
 END
