--- a/AddContactPlus/resource.rc
+++ b/AddContactPlus/resource.rc
@@ -123,7 +123,7 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     LTEXT           "User ID:",IDC_IDLABEL,6,4,89,10
     EDITTEXT        IDC_USERID,6,16,90,12,ES_AUTOHSCROLL
-    LTEXT           "Protocol:",IDC_STATIC,112,4,108,10
+    LTEXT           "Account:",IDC_STATIC,112,4,108,10
     COMBOBOX        IDC_PROTO,112,16,110,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Custom name:",IDC_STATIC,6,33,89,10
     EDITTEXT        IDC_MYHANDLE,6,45,90,12,ES_AUTOHSCROLL
