Moved variables-related options to a new Variables tab. Added option to do not update variables during idle. Added option to do not update variables on ICQ status message requests. Added option to enable/disable status messages parsing by Variables plugin. Fixed %time% variable for idle types independent of idle time. Resource script cleaning

--- a/SimpleStatusMsg/simplestatusmsg_9.vcproj
+++ b/SimpleStatusMsg/simplestatusmsg_9.vcproj
@@ -875,6 +875,10 @@
 				>
 			</File>
 			<File
+				RelativePath="res\gotourl.ico"
+				>
+			</File>
+			<File
 				RelativePath="res\history.ico"
 				>
 			</File>
