--- a/trunk/SimpleStatusMsg/resource.rc
+++ b/trunk/SimpleStatusMsg/resource.rc
@@ -48,7 +48,7 @@ BEGIN
             VALUE "FileDescription", "Simple Status Message plugin for Miranda IM"
             VALUE "FileVersion", "1.9.0.3"
             VALUE "InternalName", "simplestatusmsg"
-            VALUE "LegalCopyright", "Copyright © 2006-2010 Bartosz Bia³ek, © 2005 Harven"
+            VALUE "LegalCopyright", "Copyright © 2006-2011 Bartosz Bia³ek, © 2005 Harven"
             VALUE "OriginalFilename", "simplestatusmsg.dll"
             VALUE "ProductName", "Simple Status Message"
             VALUE "ProductVersion", "1.9.0.3"
@@ -269,10 +269,10 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "Protocols",IDC_STATIC,4,2,300,58,WS_GROUP
+    GROUPBOX        "Behaviour on status change",IDC_STATIC,4,2,300,58,WS_GROUP
     COMBOBOX        IDC_CBOPTPROTO,13,15,106,97,CBS_DROPDOWNLIST | WS_TABSTOP
     PUSHBUTTON      "Apply to all",IDC_BOPTPROTO,123,15,60,13
-    LTEXT           "Max length:",IDC_STATIC,198,17,63,8
+    LTEXT           "Max length:",IDC_MAXLENGTH,198,17,63,8
     EDITTEXT        IDC_EMAXLENGTH,262,15,36,12,ES_NUMBER | NOT WS_BORDER,WS_EX_CLIENTEDGE
     CONTROL         "Spin2",IDC_SMAXLENGTH,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_NOTHOUSANDS,288,15,10,14
     CONTROL         "Pop up dialog box",IDC_ROPTPROTO1,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,26,31,128,8
